--- a/backend/eager/CMakeLists.txt
+++ b/backend/eager/CMakeLists.txt
@@ -27,9 +27,14 @@ target_link_libraries(cpp_backend_poc_eager PRIVATE ${Boost_LIBRARIES})
 # PyTorch
 #
 
+
+find_package(TorchVision REQUIRED)
+target_include_directories(cpp_backend_poc_eager PRIVATE ${TORCHVISION_INCLUDE_DIRS})
+
 find_package(Torch REQUIRED)
 target_include_directories(cpp_backend_poc_eager PRIVATE ${TORCH_INCLUDE_DIRS})
 target_link_libraries(cpp_backend_poc_eager PRIVATE ${TORCH_LIBRARIES})
+
 
 # torch::deploy currently does not add itself to TORCH_LIBRARIES it seems,
 # presumably because it is in beta.  We hunt down for, and separately link
@@ -43,3 +48,4 @@ find_library(
     REQUIRED)
 
 target_link_libraries(cpp_backend_poc_eager PRIVATE ${TORCH_DEPLOY})
+target_link_libraries(cpp_backend_poc_eager PUBLIC TorchVision::TorchVision)
