--- a/backend/eager/requirements.txt
+++ b/backend/eager/requirements.txt
@@ -1,24 +1,24 @@
-certifi==2021.5.30
-charset-normalizer==2.0.6
-click==8.0.1
-filelock==3.0.12
-huggingface-hub==0.0.17
-idna==3.2
-joblib==1.0.1
-numpy==1.21.2
-packaging==21.0
-Pillow==8.3.2
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
+filelock==3.3.2
+huggingface-hub==0.0.19
+idna==3.3
+joblib==1.1.0
+numpy==1.21.3
+packaging==21.2
+Pillow==8.4.0
 pyparsing==2.4.7
-PyYAML==5.4.1
-regex==2021.8.28
+PyYAML==6.0
+regex==2021.10.23
 requests==2.26.0
-sacremoses==0.0.45
+sacremoses==0.0.46
 six==1.16.0
 tokenizers==0.10.3
-torch==1.10.0.dev20210921+cpu
-torchaudio==0.10.0.dev20210921+cpu
-torchvision==0.11.0.dev20210921+cpu
+torch==1.10.0+cpu
+torchaudio==0.10.0+cpu
+torchvision==0.11.1+cpu
 tqdm==4.62.3
-transformers==4.10.2
+transformers==4.12.0
 typing-extensions==3.10.0.2
-urllib3==1.26.6
+urllib3==1.26.7
